# membership-manager

./: .envrc  .gitignore  .yamllint  Concatenate_Project_Files_For_GPT_Instructions.sh  Generate_Context.sh  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: api-tests.yml  ci.yml  db-test.yml  db-tests.yml
api/: Dockerfile  main.py  requirements.txt
app/: Dockerfile  alembic.ini  config.py  create_tables.py  database.py  entrypoint.sh  main.py  models.py  requirements.txt  schemas.py  seed_data.py
app/alembic/: env.py
app/alembic/versions/: ba80acc221a9_add_created_at_modified_at_and_.py
app/api/: routes_member.py  routes_membership.py  routes_misc.py
app/pdf/: generate_welcome_letter.py
app/pdf/templates/: welcome_letter.html.jinja2
app/scripts/: generate_letters.py
app/seed/: seed_data.py
app/tests/: test_db.py
monitoring/: monitoring_README.md  prometheus.yml  promtail-config.yml
monitoring/alertmanager/: config.yml
monitoring/grafana/: dashboards.yml
monitoring/grafana/dashboards/: admin.json  (+16 more)
monitoring/loki/: loki-local-config.yml
monitoring/prometheus/: prometheus.yml
postgres/: init.sql
postgres/init/: init.sql
tests/: conftest.py  setup_test_db.py  test_db.py  test_generate_welcome_letter_route.py  test_main.py  test_models.py  test_models_member.py  test_models_membership.py  test_routes_member_search.py  test_routes_membership.py  test_routes_misc.py  test_schemas_member.py  test_schemas_membership.py
tests/monitoring/: test_monitoring_alerts.py
(+3 files in other folders)
